[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylru"
version = "1.2.1"
description = "A least recently used (LRU) cache implementation"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Jay Hutchinson", email = "jlhutch+pylru@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jlhutch/pylru"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
