[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pylru"
version = "1.2.2"
authors = [{name = "Jay Hutchinson", email = "jlhutch+pylru@gmail.com"},]

description = "A least recently used (LRU) cache implementation"
readme = "README.md"
requires-python = ">=3.3"
license = "MIT"
license-files = ["LICENSE.txt"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project-urls]
Homepage = "https://github.com/jlhutch/pylru"

[tool.setuptools]
py-modules = ["pylru"]
